--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.cdnfonts.com/css/satoshi');
+body, html {
+  margin: 0;
+  height: 100%;
+  font-family: 'Satoshi';
+
+}
