feat:added header content

--- a/src/app/layout/sidebar/sidebar.html
+++ b/src/app/layout/sidebar/sidebar.html
@@ -1,4 +1,4 @@
-<nav class="vh-100 p-3 border border-0 shadow-lg rounded-end-3 text-center z-2" style="width: 260px">
+<nav class="vh-100 p-3 border border-0 shadow-sm rounded-end-3 text-center z-2" style="width: 260px">
   <div class="mb-5">
     <img src="assets/images/sidebar/brisk-logo.svg" alt="" />
   </div>
