--- a/src/app/layout/header/header.html
+++ b/src/app/layout/header/header.html
@@ -1,3 +1,9 @@
 <div class="pt-5 px-4">
   <p>header works!</p>
+
+  <div class="bg-white px-4 py-2 rounded-circle">
+    <img src="assets/images/header/search.svg" alt="">
+    <input type="text" placeholder="Search...">
+    <img src="assets/images/header/stars.svg" alt="stars">
+  </div>
 </div>
