--- a/src/app/layout/layout.scss
+++ b/src/app/layout/layout.scss
@@ -9,3 +9,11 @@ main {
 .bg-sandal{
   background-color: #f0f0f0;
 }
+
+.rounded-top-right {
+  border-top-right-radius: 5rem;
+}
+
+.rounded-bottom-right{
+  border-bottom-right-radius: 5rem;
+}
