--- a/src/app/layout/sidebar/sidebar.html
+++ b/src/app/layout/sidebar/sidebar.html
@@ -1,6 +1,6 @@
-<nav class="vh-100 p-3 border border-0 shadow-sm rounded-end-3 text-center z-2" style="width: 260px">
+<nav class="vh-100 p-3 border border-0 shadow-sm rounded-end-3 text-center z-2 bg-black" style="width: 260px">
   <div class="mb-5">
-    <img src="assets/images/sidebar/brisk-logo.svg" alt="" />
+    <img src="assets/images/sidebar/dark-logo.svg" alt="brisk-logo" />
   </div>
   <ul class="nav flex-column text-start">
     <li class="nav-item">
