--- a/src/app/layout/layout.html
+++ b/src/app/layout/layout.html
@@ -3,7 +3,7 @@
   <app-sidebar></app-sidebar>
 
   <!-- main content area -->
-  <div class="d-flex flex-column flex-grow-1 bg-sandal z-n1">
+  <div class="d-flex flex-column flex-grow-1 bg-sandal">
     <!-- header -->
     <app-header></app-header>
 
