feat:added table and desined the header

--- a/src/app/layout/sidebar/sidebar.html
+++ b/src/app/layout/sidebar/sidebar.html
@@ -1,8 +1,8 @@
-<nav class="vh-100 p-3 border border-0 shadow-sm rounded-end-3 text-center z-2 bg-black" style="width: 260px">
+<nav class="vh-100 p-3 border border-1 shadow-lg rounded-end-3 text-center" style="width: 260px">
   <div class="mb-5">
-    <img src="assets/images/sidebar/dark-logo.svg" alt="brisk-logo" />
+    <img src="assets/images/sidebar/brisk-logo.svg" alt="brisk-logo" />
   </div>
-  <ul class="nav flex-column text-start">
+  <ul class="nav flex-column text-start pt-4">
     <li class="nav-item">
       <a
         routerLink="/dashboard"
