--- a/src/app/layout/layout.html
+++ b/src/app/layout/layout.html
@@ -8,11 +8,11 @@
     <app-header></app-header>
 
     <!-- main outlet -->
-     <main class="flex-grow-1 p-4">
+     <main class="flex-grow-1 px-5">
       <router-outlet></router-outlet>
      </main>
 
     <!-- footer -->
-    <app-footer></app-footer>
+    <!-- <app-footer></app-footer> -->
   </div>
 </div>
