--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,8 @@
 // Learn more about theming and how to use it for your application's
 // custom components at https://material.angular.dev/guide/theming
 @use '@angular/material' as mat;
+@import "primeflex/primeflex.css";
+
 
 html {
   @include mat.theme((
