--- a/src/app/layout/layout.html
+++ b/src/app/layout/layout.html
@@ -1,14 +1,14 @@
-<div class="d-flex vh-100">
+<div class="d-flex vh-100 bg-body text-body">
   <!-- sidebar layout -->
   <app-sidebar></app-sidebar>
 
   <!-- main content area -->
-  <div class="d-flex flex-column flex-grow-1 bg-sandal">
+  <div class="d-flex flex-column flex-grow-1 bg-sandal bg-body text-body">
     <!-- header -->
     <app-header></app-header>
 
     <!-- main outlet -->
-     <main class="flex-grow-1 px-5">
+     <main class="px-5">
       <router-outlet></router-outlet>
      </main>
 
