--- a/src/app/pages/projects/projects.html
+++ b/src/app/pages/projects/projects.html
@@ -1,4 +1,5 @@
-<div class="w-100 project-container border-rd-25 bg-white mb-2">
+<div class="w-100 project-container border-rd-25 bg-white mb-2 bg-body text-body">
+  <p-toast position="top-right"></p-toast>
   <!-- Header with Create button -->
   <div class="d-flex justify-content-between align-items-center mb-3">
     <h3 class="">Projects</h3>
@@ -8,106 +9,118 @@
     </button>
   </div>
 
-  <!-- Dialog moved OUTSIDE flex row -->
+  <!-- Dialog OUTSIDE flex row -->
   <p-dialog
     header="Create New Project"
     [modal]="true"
     [(visible)]="visible"
     [style]="{ width: '60rem', height: '60rem' }"
     styleClass="custom-dialog"
+    (onHide)="hideDialog()"
   >
-    <div class="project-form">
-      <div class="field">
-        <label for="projectName">Project Name</label>
-        <input pInputText id="projectName" />
+    <form [formGroup]="projectForm" (ngSubmit)="submitForm()" class="project-form">
+      <div
+        class="field"
+        *ngFor="
+          let field of [
+            { id: 'projectName', label: 'Project Name' },
+            { id: 'poNumber', label: 'PO Number' },
+            { id: 'createdBy', label: 'Created By' },
+            { id: 'client', label: 'Client' },
+            { id: 'createdProjectOperation', label: 'Project Operation' }
+            
+          ]
+        "
+      >
+        <label [for]="field.id"> {{ field.label }} <span class="required">*</span> </label>
+        <input pInputText [id]="field.id" [formControlName]="field.id" />
+        <small
+          class="error"
+          *ngIf="projectForm.get(field.id)?.invalid && projectForm.get(field.id)?.touched"
+        >
+          {{ field.label }} is required.
+        </small>
       </div>
-
+      <!-- ================================== -->
       <div class="field">
-        <label for="poNumber">PO Number</label>
-        <input pInputText id="poNumber" />
+        <label for="status">Status <span class="required">*</span></label>
+        <select id="status" formControlName="status" class="form-select">
+          <option *ngFor="let option of statusOptions" [value]="option">
+            {{ option }}
+          </option>
+        </select>
+        <small
+          class="error"
+          *ngIf="projectForm.get('status')?.invalid && projectForm.get('status')?.touched"
+        >
+          Status is required.
+        </small>
       </div>
-
-      <div class="field">
-        <label for="createdBy">Created By</label>
-        <input pInputText id="createdBy" />
-      </div>
-
-      <div class="field">
-        <label for="createdOn">Created On</label>
-        <p-datepicker></p-datepicker>
-      </div>
-
-      <div class="field">
-        <label for="client">Client</label>
-        <input pInputText id="client" />
-      </div>
-
-      <div class="field">
-        <label for="createdProjectOperation">Project Operation</label>
-        <input pInputText id="createdProjectOperation" />
-      </div>
-
-      <div class="field">
-        <label for="status">Status</label>
-        <input pInputText id="status" value="Active"/>
-      </div>
-
+      <!-- ================================== -->
       <div class="flex justify-end gap-2 mt-4">
-        <p-button label="Cancel" severity="secondary" (click)="visible = false" />
-        <p-button label="Create" />
+        <p-button label="Cancel" severity="secondary" (click)="hideDialog()" />
+        <p-button type="submit" label="Create" />
       </div>
-    </div>
+    </form>
   </p-dialog>
 
   <!-- Table -->
-  <p-table
-    [value]="projects"
-    [paginator]="true"
-    [rows]="12"
-    [tableStyle]="{ 'min-width': '70rem' }"
-    [showCurrentPageReport]="true"
-    currentPageReportTemplate="Showing {first} to {last} of {totalRecords} projects"
-    [responsiveLayout]="'scroll'"
-  >
-    <ng-template pTemplate="header">
-      <tr>
-        <th>S.No</th>
-        <th>Project Name</th>
-        <th>PO Number</th>
-        <th>Created By</th>
-        <th>Created On</th>
-        <th>Client</th>
-        <th>Operation</th>
-        <th>Status</th>
-        <th>Action</th>
-      </tr>
-    </ng-template>
+  <!-- Loader container -->
+  <div *ngIf="loading" class="loader-container">
+    <p-progressSpinner></p-progressSpinner>
+  </div>
 
-    <ng-template pTemplate="body" let-project let-rowIndex="rowIndex">
-      <tr>
-        <td>{{ rowIndex + 1 }}</td>
-        <td>{{ project.projectName }}</td>
-        <td>{{ project.poNumber }}</td>
-        <td>{{ project.createdBy }}</td>
-        <td>{{ project.createdOn }}</td>
-        <td>{{ project.client }}</td>
-        <td>{{ project.createdProjectOperation }}</td>
-        <td>
-          <span class="status-badge" [ngClass]="project.status.toLowerCase()">
-            {{ project.status }}
-          </span>
-        </td>
-        <td>
-          <p-menu #actionMenu [popup]="true" [model]="actionItems" appendTo="body"></p-menu>
-          <button
-            pButton
-            type="button"
-            icon="pi pi-ellipsis-v"
-            class="p-button-text p-button-rounded p-button-sm"
-            (click)="actionMenu.toggle($event)"
-          ></button>
-        </td>
-      </tr>
-    </ng-template>
-  </p-table>
+  <div
+    *ngIf="!loading"
+    class="w-100 project-container border-rd-25 bg-white mb-2 bg-body text-body"
+  >
+    <p-table
+      [value]="projects"
+      [paginator]="true"
+      [rows]="12"
+      [tableStyle]="{ 'min-width': '70rem' }"
+      [responsiveLayout]="'scroll'"
+    >
+      <ng-template pTemplate="header">
+        <tr>
+          <th>S.No</th>
+          <th>Project Name</th>
+          <th>PO Number</th>
+          <th>Created By</th>
+          <th>Created On</th>
+          <th>Client</th>
+          <th>Operation</th>
+          <th>Status</th>
+          <th>Action</th>
+        </tr>
+      </ng-template>
+
+      <ng-template pTemplate="body" let-project let-rowIndex="rowIndex">
+        <tr>
+          <td>{{ rowIndex + 1 }}</td>
+          <td>{{ project.projectName }}</td>
+          <td>{{ project.poNumber }}</td>
+          <td>{{ project.createdBy }}</td>
+          <td>{{ project.createdOn }}</td>
+          <td>{{ project.client }}</td>
+          <td>{{ project.createdProjectOperation }}</td>
+          <td>
+            <span class="status-badge" [ngClass]="project.status.toLowerCase()">
+              {{ project.status }}
+            </span>
+          </td>
+          <td>
+            <p-menu #actionMenu [popup]="true" [model]="getMenuItems(project)" appendTo="body"></p-menu>
+            <button
+              pButton
+              type="button"
+              icon="pi pi-ellipsis-v"
+              class="p-button-text p-button-rounded p-button-sm"
+              (click)="actionMenu.toggle($event)"
+            ></button>
+          </td>
+        </tr>
+      </ng-template>
+    </p-table>
+  </div>
 </div>
